# Verifiable-Learning-Robust-Tree-Ensembles

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  requirements.txt  setup.sh  start_docker_container.sh
datasets/fashion_mnist0-3/models/rf/: rf_101_6_0_valFalse.silva  rf_101_6_0_valTrue.silva  rf_25_4_0_valFalse.silva  rf_25_4_0_valTrue.silva
datasets/mnist26/models/rf/: rf_101_6_0_valFalse.silva  rf_101_6_0_valTrue.silva  rf_25_4_0_valFalse.silva  rf_25_4_0_valTrue.silva
datasets/rewema/models/rf/: rf_101_6_0_valFalse.silva  rf_25_4_0_valTrue.silva  (+2 more)
src/: LSE.py  __init__.py  basic_test.sh  find_best_model.py  generate_table_3.py  generate_table_4.py  partitioned_randomforest.py  plot_memories_comparison.py  plot_performance_by_depth.py  plot_performance_by_ntrees.py  plot_times_comparison.py  test_analyzer_scalability.py  test_total_efficiency.py  train_forest.py  train_forests.py  train_forests.sh  train_lses.py  train_lses.sh  verify_only.py
src/carve/: CMakeLists.txt  README.md
src/carve/include/: tree.hpp  tree_ensemble.hpp  utils.hpp
src/carve/tools/: verify.cpp
src/silva/: README.md  __init__.py
src/silva/src/: dataset.c  dataset.h  forest.c  options.c  options.h  silva.c
src/silva/trainers/: __init__.py  classifier_mapper.py  data-manager.py  dataset_mapper.py  decision_tree.py  forest.py  gradient_boosting_forest.py  train_decision_tree.py  train_forest.py  train_gradient_boosting.py
src/utils/: download_and_split_datasets.sh  prepare_webspam.py  split_fmnist.py  split_mnist.py  split_rewema.py  split_webspam.py  unzip_datasets.sh
(+29 files in other folders)
